# mixology

./: .flake8  .gitignore  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
mixology/: _compat.py  assignment.py  constraint.py  failure.py  incompatibility.py  package_source.py  partial_solution.py  range.py  result.py  term.py  version_solver.py
mixology/contracts/: specification_provider.py
tests/: __init__.py  conftest.py  dependency.py  helpers.py  index.py  package.py  package_source.py  test_backtracking.py  test_basic_graph.py  test_dependency_graph.py  test_resolver.py  test_unsolvable.py  ui.py
