[tool.poetry]
name = "mixology"
version = "0.2.0"
description = "A generic dependency-resolution library written in pure Python"
authors = [
    "Sébastien Eustace <sebastien@eustace.io>"
]

homepage = "https://github.com/sdispater/mixology"
repository = "https://github.com/sdispater/mixology"

license = "MIT"
readme = "README.md"
keywords = ["dependency-resolution"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "~2.7 || ^3.4"

# The typing module is not in the stdlib in Python 2.7 and 3.4
typing = { version = "^3.6", python = "~2.7 || ~3.4" }

# enum34 is needed for Python 2.7
enum34 = { version = "^1.1", python = "~2.7" }

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pytest-cov = "^2.8.1"
poetry-semver = "^0.1.0"
tox = "^3.12"
pre-commit = "^1.10"


[tool.isort]
line_length = 88
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
not_skip = "__init__.py"
skip_glob = ["*/setup.py"]
filter_files = true

known_first_party = "mixology"
known_third_party = [
    "semver",
    "pytest",
]


[build-system]
requires = ["poetry>=1.0.0b8"]
build-backend = "poetry.masonry.api"
